syntax = "proto3";

message BaseMessage
{
    oneof Type
    {
        PlayerInput input = 1;
        string newPlayerRequest = 2;
        NewPlayerGrant newPlayerGrant = 3;
        GameState gameState = 4;
    }
}

message NewPlayerGrant
{
    CharacterData NewPlayer = 1;
    CharDataList CurrentChars = 2;
}

message GameState
{
    CharDataList newRemoteChars = 1;
    CharDataList updateChars = 2;
    CharDataList removeChars = 3;
    repeated BulletBunch newBullets = 4;
}

message Vector2Data
{
    float x = 1;
    float y = 2;
}

message PlayerInput
{
    optional Vector2Data pos = 1;
    Vector2Data lookPos = 2;
    oneof Item
    {
        int32 PickupItem = 3;
        int32 ItemAction = 4;
        bool ItemActionPos = 5;
        bool DropItem = 6;
    }
    optional string name = 7;
}

message CharacterData
{
    int32 characterID = 1;
    optional Vector2Data pos = 2;
    optional string name = 3;
    optional float hp = 4;
}

message CharDataList
{
    repeated CharacterData list = 1;
}

message BulletBunch
{
    float range = 1;
    float speed = 2;
    repeated BulletData bullets = 3;
}

message BulletData
{
    Vector2Data startpos = 1;
    Vector2Data currentPos = 2;
}
